main.css
/* ... */
#tabs-container {
  display: flex;
  height: 3%;
  min-height: 30px;
  width: 100%;
  background-color: #2e2e2e;
}

#notes-editor {
  display: flex;
  width: 100%;
  height: 100%;
  color: #ddd;
}

/* ==================================================================
    Components
================================================================== */
.project-title {
  display: flex;
  align-items: center;
  min-height: 30px;
  padding-left: 20px;
  background-color: #2e2e2e;
  color: whitesmoke;
}
.project-title i {
  margin-right: 10px;
}
.project-title .fa-plus {
  font-size: 10px;
  transform-origin: center center;
}
.project-title .fa-plus:hover {
  transform: scale(1.3);
  color: white;
}

.list-container {
  width: 100%;
  transition: all 0.5s ease;
  background-color: #252526;
  overflow: hidden;
}
.list-container:last-child {
  border-bottom: 1px solid #444;
}
.list-container.opened {
  height: 200px;
}
.list-container.closed {
  visibility: hidden;
  height: 0px;
}

.todo-doc {
  display: flex;
  align-items: center;
  height: 25px;
  padding-left: 20px;
  padding-right: 10px;
  gap: 10px;
  overflow: hidden;
  white-space: nowrap;
  color: #aaa;
}
.todo-doc:hover {
  cursor: pointer;
  color: #ddd;
}
.todo-doc i {
  font-size: 12px;
}
.todo-doc .fa-times {
  color: #aaa;
}
.todo-doc .fa-times:hover {
  transform: scale(1.1);
  color: white;
}

.tab {
  display: flex;
  justify-content: space-between;
  padding: 0px 15px 0px 15px;
  align-items: center;
  height: 100%;
  color: white;
  background-color: #3c3c3c;
  border-right: 1px solid #343434;
}
.tab span {
  margin-right: 10px;
}
.tab i {
  font-size: 10px;
}
.tab i:hover {
  color: white;
  transform: scale(1.3);
}

#notes-content {
  display: flex;
  flex-direction: column;
  width: 80%;
  height: 100%;
  padding-left: 20px;
  padding-right: 20px;
}

.notes-container textarea {
  width: 80%;
  height: 20vh;
  border-radius: 5px;
  border: none;
  padding: 10px;
  color: whitesmoke;
  text-align: start;
  resize: none;
  background-color: #666;
}

.checklist-container {
  flex: 1;
  padding: 0px;
}
.checklist-container .list-header {
  display: flex;
  align-items: center;
  gap: 10px;
}
.checklist-container .list-header .fa-plus:hover {
  transform: scale(1.2);
  cursor: pointer;
}
.checklist-container ul {
  max-height: 400px;
  width: 80%;
  overflow-y: auto;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
  border-radius: 5px;
  list-style-type: none;
  background-color: #414141;
}
.checklist-container ul li {
  display: flex;
  padding: 10px;
  border-radius: 2px;
  border-bottom: 1px solid #393939;
}
.checklist-container ul li:hover {
  cursor: pointer;
  background-color: #515151;
}
.checklist-container ul li.checked {
  color: #6cff5b;
}
.checklist-container ul li.checked > span {
  text-decoration: line-through;
}
.checklist-container ul li.unchecked {
  color: #ff4d2d;
}
.checklist-container ul li i {
  margin-right: 10px;
}
.checklist-container ul li .fa-times {
  color: whitesmoke;
}
.checklist-container ul li .fa-times:hover {
  transform: scale(1.2);
}

#notes-details {
  display: flex;
  flex-direction: column;
  width: 20%;
  padding-left: 20px;
  padding-right: 20px;
  border-left: 1px solid #222;
}
#notes-details .due-date {
  background-color: #444;
  color: whitesmoke;
  border: 1px solid #555;
}

#display-panel {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  margin: auto;
  padding: 15px;
  color: white;
  text-align: center;
  background-color: #555;
}
#display-panel.form {
  width: 400px;
  height: 600px;
}
#display-panel.info {
  width: 400px;
  height: 125px;
}
#display-panel.hidden {
  display: none;
}
#display-panel .top-bar {
  display: flex;
  justify-content: center;
  margin-bottom: 10px;
  text-align: center;
  font-size: 18px;
}
#display-panel .top-bar .fa-times:hover {
  transform: scale(1.2);
  cursor: pointer;
}

#panel-content {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  flex: 1;
}
#panel-content .message {
  font-size: 18px;
}
#panel-content input[type=text] {
  background-color: #bbb;
  color: black;
  border: none;
}
#panel-content .buttons {
  display: flex;
  justify-content: center;
  gap: 1rem;
}

/*# sourceMappingURL=main.css.map */

